store and update product subcategories
