# storage/api-docs/api-docs.json
@@ -393,7 +393,7 @@
                         "schema": {
                             "type": "string"
                         },
-                        "example": "porudkty-mleczne"
+                        "example": "produkty-mleczne"
                     }
                 ],
                 "requestBody": {
@@ -402,6 +402,158 @@
                         "application/json": {
                             "schema": {
                                 "$ref": "#/components/schemas/UpdateProductCategoryRequest"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "200": {
+                        "description": "Successful operation",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "message": {
+                                            "type": "string",
+                                            "example": "Successfully created"
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    }
+                },
+                "security": [
+                    {
+                        "bearer": []
+                    }
+                ]
+            }
+        },
+        "/admin/product-categories/delete/{slug}": {
+            "post": {
+                "tags": [
+                    "Admin-Categories-Products"
+                ],
+                "summary": "Delete products category by slug",
+                "description": "Delete products category",
+                "operationId": "delete-product-category",
+                "parameters": [
+                    {
+                        "name": "slug",
+                        "in": "path",
+                        "description": "Products category slug",
+                        "required": true,
+                        "schema": {
+                            "type": "string"
+                        },
+                        "example": "produkty-mleczne"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Successful operation",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "message": {
+                                            "type": "string",
+                                            "example": "Successfully deleted"
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    },
+                    "500": {
+                        "description": "Item not founded",
+                        "content": {
+                            "application/json": {
+                                "schema": {},
+                                "example": "Item not founded"
+                            }
+                        }
+                    }
+                },
+                "security": [
+                    {
+                        "bearer": []
+                    }
+                ]
+            }
+        },
+        "/admin/product-subcategories/store": {
+            "post": {
+                "tags": [
+                    "Admin-Subcategories-Products"
+                ],
+                "summary": "Create products subcategory",
+                "description": "",
+                "operationId": "store-product-subcategory",
+                "requestBody": {
+                    "required": true,
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "$ref": "#/components/schemas/StoreProductSubcategoryRequest"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "200": {
+                        "description": "Successful operation",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "message": {
+                                            "type": "string",
+                                            "example": "Successfully created"
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    }
+                },
+                "security": [
+                    {
+                        "bearer": []
+                    }
+                ]
+            }
+        },
+        "/admin/product-subcategories/update/{slug}": {
+            "post": {
+                "tags": [
+                    "Admin-Subcategories-Products"
+                ],
+                "summary": "Update products subcategory",
+                "description": "",
+                "operationId": "update-product-subcategory",
+                "parameters": [
+                    {
+                        "name": "slug",
+                        "in": "path",
+                        "description": "Products-subcategory slug",
+                        "required": true,
+                        "schema": {
+                            "type": "string"
+                        },
+                        "example": "jogurt"
+                    }
+                ],
+                "requestBody": {
+                    "required": true,
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "$ref": "#/components/schemas/UpdateProductSubcategoryRequest"
                             }
                         }
                     }
@@ -995,6 +1147,55 @@
                         "description": "image",
                         "type": "string",
                         "example": "Image file"
+                    }
+                },
+                "type": "object"
+            },
+            "StoreProductSubcategoryRequest": {
+                "title": "StoreProductSubcategoryRequest",
+                "description": "Class StoreProductSubcategoryRequest",
+                "required": [
+                    "category_id",
+                    "name"
+                ],
+                "properties": {
+                    "category_id": {
+                        "title": "category_id",
+                        "description": "Id of products category",
+                        "type": "integer",
+                        "example": "1"
+                    },
+                    "name": {
+                        "title": "name",
+                        "description": "Name of products subcategory",
+                        "type": "string",
+                        "maxLength": 180,
+                        "minLength": 2,
+                        "example": "Jogurt"
+                    }
+                },
+                "type": "object"
+            },
+            "UpdateProductSubcategoryRequest": {
+                "title": "UpdateProductSubcategoryRequest",
+                "description": "Class UpdateProductSubcategoryRequest",
+                "required": [
+                    "name"
+                ],
+                "properties": {
+                    "category_id": {
+                        "title": "category_id",
+                        "description": "Id of products category",
+                        "type": "integer",
+                        "example": "1"
+                    },
+                    "name": {
+                        "title": "name",
+                        "description": "Name of products subcategory",
+                        "type": "string",
+                        "maxLength": 180,
+                        "minLength": 2,
+                        "example": "Jogurt"
                     }
                 },
                 "type": "object"
